--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <!-- <header class="header"> 
+    <header class="header"> 
         <div class="container-nav">
         <nav class="site-nav-main">
             <a href="./index.html" class="logo"> <span class="logo-one">Web</span>Studio</a>
@@ -30,7 +30,7 @@
             </ul>
         </address>
         </div>
-    </header> -->
+    </header>
     <!-- Hero -->
     <main>
         <div class="hero-main">
@@ -305,7 +305,7 @@
         </section>
     </main>
 <!-- the end of the paje -->
-<!-- <footer class="footer">
+<footer class="footer">
     <div class="container-wrap">
     <div class="logo-main-footer"><a href="./index.html" class="footer-logo"> <span class="logo-one">Web</span>Studio</a>
     <p class="footer-text">Increase the flow of customers and 
@@ -356,7 +356,7 @@
         </form>
     </div>
     </div>
-</footer> -->
+</footer>
 <div class="backdrop is-hidden" data-modal>
     <div class="modal">
         <button type="button" class="modal-close" data-modal-close>
