--- a/index.html
+++ b/index.html
@@ -30,6 +30,11 @@
             </ul>
         </address>
         </div>
+        <button type="button" class="menu-open">
+            <svg class="burger" width="32" height="32">
+                <use href="./images/icons.svg#icon-menu-open"></use>
+            </svg>
+        </button>
     </header>
     <!-- Hero -->
     <main>
