--- a/index.html
+++ b/index.html
@@ -29,12 +29,65 @@
                 <li class="item"><a href="tel:+110001111111"  class="link">+11 (000) 111-11-11</a></li>
             </ul>
         </address>
-        </div>
-        <button type="button" class="menu-open">
+        <button type="button" data-menu-open class="menu-open">
             <svg class="burger" width="32" height="32">
                 <use href="./images/icons.svg#icon-menu-open"></use>
             </svg>
         </button>
+        </div>
+        <div class="mob-menu is-hidden" data-menu>
+            <div class="container-mob">
+            <button type="button" data-menu-close class="menu-close">
+                <svg class="drop-closer" width="8" height="8">
+                    <use href="./images/icons.svg#icon-close-black"></use>
+                </svg>
+            </button>
+            <div class="menu-top">
+            <ul class="mob-menu-list">
+                <li class="mob-menu-item"><a href="" class="mob-menu-link">Studio</a></li>
+                <li class="mob-menu-item"><a href="./portfolio.html" class="mob-menu-link">Portfolio</a></li>
+                <li class="mob-menu-item"><a href="" class="mob-menu-link current">Contacts</a></li>
+            </ul>
+            </div>
+            <div class="menu-bottom">
+            <ul class="mob-menu-nav">
+                <li class="mob-menu-item"><a href="tel:+110001111111" class="mob-tel-link">+11 (000) 111-11-11</a></li>
+                <li class="mob-menu-item"><a href="mailto:info@devstudio.com" class="mob-mail-link">info@devstudio.com</a></li>
+            </ul>
+            <ul class="menu-soc-list">
+                <li class="team-soc-links">
+                    <a class="team-soc-link" href="">
+                        <svg class="soc-icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-instagram-2"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="team-soc-links">
+                    <a class="team-soc-link" href="">
+                        <svg class="soc-icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-twitter-1"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="team-soc-links">
+                    <a class="team-soc-link" href="">
+                        <svg class="soc-icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-facebook-1"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="team-soc-links">
+                    <a class="team-soc-link" href="">
+                        <svg class="soc-icon" width="24" height="24">
+                            <use href="./images/icons.svg#icon-linkedin-1"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </div>
+            </div>
+
+        </div>
     </header>
     <!-- Hero -->
     <main>
@@ -261,7 +314,7 @@
         </section>
         <section class="costumers">
             <div class="container">
-                <h2 class="costumers-title">Costomers</h2>
+                <h2 class="costumers-title">Customers</h2>
                 <ul class="costumers-list">
                     <li class="costumer-item">
                         <a class="costumer-link" href="#">
@@ -425,6 +478,10 @@
     </div>
 </div>
 <script src="./js/modal.js"></script>
+<script src="./js/menu.js"></script>
+<!-- <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+    integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+    crossorigin="anonymous"></script> -->
 </body>
 
 
