--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             <ul class="main-team">
                 <li class="team-link">
                     <img 
-                    srcset="./images/mark.jpg 1x, /images/mark2xx.jpg 2x"
+                    srcset="./images/mark.jpg 1x, /images/mark2xxx.jpg 2x"
                     src="./images/mark.jpg" alt="Mark Guerrero Product Designer" width="264">
                     <div class="team-info"> 
                     <h3 class="team-person">Mark Guerrero</h3>
